[package]
name = "hllv"
version = "0.1.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "hllv"
path = "src/main.rs"

[dependencies]
rust-crypto = "^0.2"
serde_json = "1.0"
indoc = "0.3"

[dev-dependencies]
tempdir = "0.3"
