[package]
name = "hllv"
version = "0.1.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
serde_json = "1.0"
fs2 = "0.4.3"
indoc = "0.3"

[dev-dependencies]
lazy_static = "1.3.0"
tempdir = "0.3"
